--- a/src/dev/spotiguess/public/index.html
+++ b/src/dev/spotiguess/public/index.html
@@ -20,6 +20,15 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Spotiguess</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-2088H1FXSY"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-2088H1FXSY');
+    </script>
   </head>
   <body style="margin: 0px;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
